<resources>
    <string name="app_name">Amplitude Sampler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="domain_label">Domain:</string>
    <string name="domain_hint">localhost/etc/public</string>
    <string name="id_label">Device ID:</string>
    <string name="id_hint">1</string>
    <string name="start_btn">Start</string>
    <string name="confirm_btn">Confirm</string>
    <string name="home_fragment">Home fragment</string>
</resources>
